<resources>
    <string name="app_name">QuotesApp</string>
    <string name="headavatar">headAvatar</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="submit">Submit</string>
    <string name="addnote">addNote</string>
    <string name="add_note">add_note</string>
    <string name="menu">menu</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="title">Title</string>

    <string-array name="menusValues">
        <item>Logout</item>
        <item>Profile</item>
    </string-array>
</resources>