<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/editfields"
        android:hint="@string/title"
        android:inputType="text"
        android:textSize="22sp"
        />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:hint="@string/description"
        android:inputType="text"
        android:textSize="22sp"
        />

    <Button
        android:id="@+id/addQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:text="@string/add"
        android:onClick="addQuote"
        android:background="@drawable/btn"
        />

</LinearLayout>