<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    >

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/login"
        android:inputType="textEmailAddress"
        android:layout_margin="60dp"
        android:gravity="center"
        android:hint="@string/email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/login"
        android:ems="10"
        android:gravity="center"
        android:layout_margin="60dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn"
        android:fontFamily="monospace"
        android:onClick="loginUser"
        android:text="@string/login" />

    <TextView
        android:id="@+id/LoginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/Red"
        android:textSize="25sp" />
</LinearLayout>